--- a/views/layouts/main.dust
+++ b/views/layouts/main.dust
@@ -21,7 +21,7 @@
 
       <nav class="navbar navbar-dark bg-primary">
         <a class="navbar-brand" href="#">
-          Exercie NodeJs <small>aybezz</small>
+          Exercice NodeJs <small>aybezz</small>
         </a>
         <ul class="nav navbar-nav pull-right">
           {#user}
